# lanzaboote

nix/modules/: lanzaboote.nix
rust/tool/: Cargo.toml
rust/tool/bootspec/: Cargo.toml
rust/tool/bootspec/src/: v1.rs
rust/tool/shared/: Cargo.toml
rust/tool/shared/src/: generation.rs
