[package]
name = "bootspec"
version = "1.1.0"
edition.workspace = true
description = "An implementation of NixOS RFC 125's bootspec datatype"
license = "MIT"
repository = "https://github.com/DeterminateSystems/bootspec"
documentation = "https://docs.rs/bootspec/latest/bootspec"
authors = ["Graham Christensen <graham@determinate.systems>", "Cole Helbling <cole.helbling@determinate.systems>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.10.1"
